[dmn] - fix styling, overflow issue

--- a/styles/_design-my-night.scss
+++ b/styles/_design-my-night.scss
@@ -10,7 +10,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-	    padding: 50px 0;
+	    padding: 50px 0 0;
 
 		-webkit-overflow-scrolling: touch;
 		-webkit-backdrop-filter: blur(15px);
@@ -73,7 +73,13 @@
 
 	#dmn-partner-widget {
 
-		margin: 0 20px;
+		margin: 0 auto 50px;
+
+        #dmn-widget-inner {
+
+			overflow: auto;
+
+        }
 
 		.footer {
 
